# pixhawk_imu_visualizer

./: .gitignore  CMakeLists.txt  README.md  Курсовая текст по проге.odt  Курсовая.odt
COURSEWORK/: coursework_imu.aux  coursework_imu.tex  coursework_imu.toc
src/: imu_shared.h  imu_visualizer.cpp  imu_visualizer.h  pixhawk_imu_reader.cpp
